[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/DialogBackground.png" type="Texture" id=1]
[ext_resource path="res://Entities/SkillUnlocker/DialogBox.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Retro-Gaming/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Entities/SkillUnlocker/boots_skill.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[node name="DialogSkillUnlocker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.19559
margin_top = -0.342987
margin_right = 6.19556
margin_bottom = -6.34302
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPivot" type="Position2D" parent="."]

[node name="DialogBox" type="Control" parent="DialogPivot"]
margin_left = -142.0
margin_top = -71.0
margin_right = 444.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogPivot/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="DialogPivot/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 79.7128
margin_top = 71.9654
margin_right = -69.2872
margin_bottom = -9.03461
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Hello world "
text = "Hello world "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogPivot/DialogBox"]

[node name="Sprite" type="Sprite" parent="DialogPivot/DialogBox"]
position = Vector2( 283.89, 209.793 )
scale = Vector2( 1.71419, 1.71419 )
texture = ExtResource( 4 )
[connection signal="tween_completed" from="DialogPivot/DialogBox/Tween" to="." method="_on_tween_completed"]
